<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:dividerPadding="5dp"
    android:orientation="horizontal"
    android:padding="5dp"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".UhrActivity" >

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/UhrzeitLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="0dp"
                android:layout_marginTop="0dp"
                android:text="@string/hello_world"
                android:textSize="45sp" />

            <pit.holzer.weckuhr.MyAnalogClock
                android:id="@+id/analogClock1"
                android:layout_width="480dp"
                android:layout_height="fill_parent"
                android:layout_below="@id/UhrzeitLabel"
                android:layout_centerHorizontal="true" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent" >

            <LinearLayout
                android:id="@+id/wakeTimeGroup"
                android:layout_width="wrap_content"
                android:layout_height="150dp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:dividerPadding="10dp" >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:dividerPadding="10dp"
                    android:orientation="vertical" >

                    <Button
                        android:id="@+id/backBut"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="0dp"
                        android:layout_marginRight="0dp"
                        android:onClick="onLeftClick"
                        android:text="@string/lt_30"
                        android:textSize="36sp" />

                    <Button
                        android:id="@+id/backBut1m"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:minHeight="60dp"
                        android:onClick="onLeftClick1m"
                        android:text="@string/lt_1"
                        android:textSize="36sp" />

                </LinearLayout>

                <TextView
                    android:id="@+id/alarmTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="0dp"
                    android:layout_marginRight="0dp"
                    android:minHeight="120dp"
                    android:padding="20dp"
                    android:tag="20dp"
                    android:textSize="58sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical" >

                    <Button
                        android:id="@+id/foreBut"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="onRightClick"
                        android:text="@string/_30"
                        android:textSize="36sp" />

                    <Button
                        android:id="@+id/foreBut1m"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="onRightClick1m"
                        android:text="@string/_1"
                        android:textSize="36sp" />

                </LinearLayout>
            </LinearLayout>
            
            <TextView
                android:id="@+id/wakeTimeTextField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@id/wakeTimeGroup"
                android:layout_alignParentTop="false"
                android:layout_centerHorizontal="true"
                android:layout_centerInParent="false"
                android:layout_marginBottom="10dp"
                android:text="@string/wakeTimeLab"
                android:textAppearance="?android:attr/absListViewStyle"
                android:textSize="30sp" />

            <ToggleButton
                android:id="@+id/alarmToggleBut"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:checked="false"
                android:onClick="onAlarmClick"
                android:textOff="@string/alarmButLab"
                android:textOn="@string/cancelAlarmLab"
                android:textSize="50sp" />

        </RelativeLayout>
</LinearLayout>

